--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,34 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout  xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <import type="android.view.View"/>
-        <variable
-            name="viewModel"
-            type="com.example.ui.viewmodel.LoginViewModel" />
-    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".LoginActivity">
 
         <EditText
-            android:id="@+id/editText6"
+            android:text="J1006"
+            android:id="@+id/userpw"
             android:layout_width="418dp"
             android:layout_height="53dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/editText5"
+            app:layout_constraintTop_toBottomOf="@+id/username"
             app:layout_constraintVertical_bias="0.09" />
 
         <ImageView
@@ -46,21 +40,21 @@
             android:id="@+id/imageView2"
             android:layout_width="59dp"
             android:layout_height="49dp"
-            app:layout_constraintBottom_toBottomOf="@+id/editText5"
+            app:layout_constraintBottom_toBottomOf="@+id/username"
             app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/editText5"
+            app:layout_constraintTop_toTopOf="@+id/username"
             app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/u17" />
 
         <EditText
-            android:id="@+id/editText5"
+            android:text="J1006"
+            android:id="@+id/username"
             android:layout_width="418dp"
             android:layout_height="50dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintHorizontal_bias="0.0"
@@ -72,9 +66,9 @@
             android:id="@+id/imageView3"
             android:layout_width="62dp"
             android:layout_height="50dp"
-            app:layout_constraintBottom_toBottomOf="@+id/editText6"
+            app:layout_constraintBottom_toBottomOf="@+id/userpw"
             app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/editText6"
+            app:layout_constraintTop_toTopOf="@+id/userpw"
             app:srcCompat="@drawable/u18" />
 
         <Button
@@ -84,9 +78,9 @@
             android:layout_marginTop="20dp"
             android:text="登入"
             android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="@+id/editText6"
+            app:layout_constraintEnd_toEndOf="@+id/userpw"
             app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/editText6" />
+            app:layout_constraintTop_toBottomOf="@+id/userpw" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+
