--- a/app/src/main/res/layout/activity_schedule__search_.xml
+++ b/app/src/main/res/layout/activity_schedule__search_.xml
@@ -50,13 +50,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="上線日期:"
-            app:layout_constraintBottom_toBottomOf="@+id/editText"
-            app:layout_constraintEnd_toStartOf="@+id/editText"
-            app:layout_constraintTop_toTopOf="@+id/editText"
+            app:layout_constraintBottom_toBottomOf="@+id/custom_name"
+            app:layout_constraintEnd_toStartOf="@+id/custom_name"
+            app:layout_constraintTop_toTopOf="@+id/custom_name"
             app:layout_constraintVertical_bias="0.423" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/custom_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -83,7 +83,7 @@
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText" />
+            app:layout_constraintTop_toBottomOf="@+id/custom_name" />
 
         <TextView
             android:id="@+id/textView4"
@@ -110,13 +110,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="製令單號:"
-            app:layout_constraintBottom_toBottomOf="@+id/editText4"
+            app:layout_constraintBottom_toBottomOf="@+id/mo_id"
             app:layout_constraintEnd_toEndOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="@+id/textView2"
-            app:layout_constraintTop_toTopOf="@+id/editText4" />
+            app:layout_constraintTop_toTopOf="@+id/mo_id" />
 
         <EditText
-            android:id="@+id/editText4"
+            android:id="@+id/mo_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -127,11 +127,30 @@
             app:layout_constraintTop_toBottomOf="@+id/editText3" />
 
         <Button
+            android:id="@+id/checked"
+            android:text="登入"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mo_id" />
+
+        <Button
             android:id="@+id/online_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="..."
-            app:layout_constraintBottom_toBottomOf="@+id/editText"
-            app:layout_constraintStart_toEndOf="@+id/editText" />
+            app:layout_constraintBottom_toBottomOf="@+id/custom_name"
+            app:layout_constraintStart_toEndOf="@+id/custom_name" />
+
+        <Button
+            android:id="@+id/manufacture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="..."
+            app:layout_constraintBottom_toBottomOf="@+id/mo_id"
+            app:layout_constraintStart_toEndOf="@+id/mo_id" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
